--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,2 +1,48 @@
-<p>layout-page works!</p>
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+  <!-- Sidenav -->
+  <mat-sidenav
+    #sidenav
+    [ngStyle]="{ width: '250px' }"
+    mode="push">
+    <!-- toolbar -->
+    <mat-toolbar>
+      <span>Menú</span>
+      <span class="spacer"></span>
+      <button
+        (click)="sidenav.toggle()"
+        mat-icon-button>
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <!-- Menú de navegación -->
+    <mat-nav-list>
+      <mat-list-item
+        *ngFor="let item of sidebarItems"
+        [routerLink]="item.url"
+        (click)="sidenav.toggle()">
+        <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <!-- Toolbar Contenido principal -->
+  <mat-toolbar color="primary">
+    <button
+      (click)="sidenav.toggle()"
+      mat-icon-button>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="spacer"></span>
+    <button mat-button>
+      <mat-icon>logout</mat-icon>
+      Logout
+    </button>
+  </mat-toolbar>
+
+  <!-- Contenido Principal -->
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
