--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -42,7 +42,7 @@
   </mat-toolbar>
 
   <!-- Contenido Principal -->
-  <div class="container">
+  <div class="container p-2">
     <router-outlet></router-outlet>
   </div>
 </mat-sidenav-container>
