Finalizada funcionalidad para eliminar heroes

--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -83,7 +83,8 @@
           <button
             *ngIf="isEdit"
             color="warn"
-            mat-flat-button>
+            mat-flat-button
+            (click)="onDeleteHero()">
             <mat-icon>delete</mat-icon>
             Borrar
           </button>
