Agregadas funcionalidades de login y logout

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -2,20 +2,32 @@
   <span class="text-lg mb-4">Login</span>
   <mat-form-field>
     <mat-label>Usuario</mat-label>
-    <input type="text" matInput placeholder="Nombre de usuario">
+    <input
+      matInput
+      placeholder="Nombre de usuario"
+      type="text">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Contraseña</mat-label>
-    <input type="password" matInput placeholder="Contraseña">
+    <input
+      matInput
+      placeholder="Contraseña"
+      type="password">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary">
+  <button
+    (click)="onLogin()"
+    color="primary"
+    mat-button
+    mat-flat-button>
     <mat-icon>login</mat-icon>
     Ingresar
   </button>
 
   <div class="flex justify-content-end mt-5">
-    <a class="mat-" routerLink="/auth/new-account">¿No tienes una cuenta?</a>
+    <a
+      class="mat-"
+      routerLink="/auth/new-account">¿No tienes una cuenta?</a>
   </div>
 </div>
